score section and button overlapping on small screen fix

--- a/my-app/src/components/GamePlayScreen/index.scss
+++ b/my-app/src/components/GamePlayScreen/index.scss
@@ -37,7 +37,7 @@
     left:0;
     right: 0;
     margin: auto;
-    bottom: 10%;
+    bottom: 0;
     padding: 0px !important;
     border-radius: 50px;
     background-color: rgb(255, 231, 149);
